--- a/homework004_/app/src/main/res/layout/activity_main.xml
+++ b/homework004_/app/src/main/res/layout/activity_main.xml
@@ -116,7 +116,7 @@
         android:layout_marginTop="10dp"
         android:hint="请输入密码"
         android:inputType="number"
-        android:maxLength="6"
+        android:maxLength="8"
         app:layout_constraintBottom_toBottomOf="@+id/tv_password"
         app:layout_constraintEnd_toStartOf="@+id/btn_forget"
         app:layout_constraintStart_toEndOf="@+id/tv_password"
@@ -164,4 +164,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sw_status" />
+
+    <Button
+        android:id="@+id/btn_signup"
+        android:layout_width="392dp"
+        android:layout_height="wrap_content"
+        android:text="注册"
+        android:textSize="17sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.526"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_login"
+        app:layout_constraintVertical_bias="0.035" />
 </androidx.constraintlayout.widget.ConstraintLayout>
