--- a/homework007/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/homework007/app/src/main/res/layout/activity_shopping_cart.xml
@@ -157,7 +157,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
-        android:text="逛逛手机商场"
+        android:text="逛逛乐高商城"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
